kubernetes/postgresql/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: postgres
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 5432
      name: tcp-postgres
      protocol: tcp
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres
spec:
  hosts:
  - "*"
  gateways:
  - postgres
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: postgres-postgresql
        port:
          number: 5432
